--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,6 +152,7 @@ section {
     color: var(--brand);
     font-weight: var(--bold);
     align-self: flex-end;
+    text-transform: uppercase;
 }
 
 .section-subtitle {
@@ -380,42 +381,44 @@ section {
 }
 
 
-/*Recem */
+/*team */
 
 .childern {
     text-align: center;
 }
 
-#recem .gallery img {
-    width: 100%;
+#team .gallery img {
+    width: auto;
     height: auto;
     border-radius: 50%;
 }
 
-#recem .desc {
+#team .desc {
     padding: 15px;
     text-align: center;
 }
 
-#recem header h2 {
+#team header h2,
+h5 {
     margin-bottom: 6rem;
+    text-align: center;
 }
 
-#recem .responsive {
+#team .responsive {
     padding: 0 6px;
     float: left;
     width: 24.99999%;
 }
 
 @media only screen and (max-width: 700px) {
-    #recem .responsive {
+    #team .responsive {
         width: 49.99999%;
         margin: 6px 0;
     }
 }
 
 @media only screen and (max-width: 500px) {
-    #recem .responsive {
+    #team .responsive {
         width: 100%;
     }
 }
