--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -384,18 +384,20 @@ section {
 /*team */
 
 .childern {
-    text-align: center;
+    text-align: justify;
 }
 
 #team .gallery img {
-    width: auto;
-    height: auto;
+    width: 50%;
+    height: 50%;
     border-radius: 50%;
+    justify-items: center;
+    justify-content: center;
 }
 
 #team .desc {
     padding: 15px;
-    text-align: center;
+    text-align: justify;
 }
 
 #team header h2,
@@ -407,7 +409,7 @@ h5 {
 #team .responsive {
     padding: 0 6px;
     float: left;
-    width: 24.99999%;
+    width: 22.99999%;
 }
 
 @media only screen and (max-width: 700px) {
