--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -289,9 +289,16 @@ section {
 */
 }
 
+.services-information-title {
+    text-align: center;
+    margin: 10px;
+}
+
 .services-information-icon {
-    font-size: 1rem;
+    font-size: 4rem;
     color: var(--brand);
+    margin-bottom: 20px;
+    display: inline-block;
 }
 
 
@@ -423,6 +430,103 @@ h5 {
     #team .responsive {
         width: 100%;
     }
+}
+
+
+/**/
+
+.our_team {
+    width: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.our_team .team_member {
+    width: 250px;
+    margin: 5px;
+    background: #fff;
+    padding: 20px 10px;
+}
+
+
+/**/
+
+.our_team .team_member .card-img {
+    width: 100%;
+    height: 15rem;
+    object-fit: cover;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 78%, 0% 100%);
+    clip-path: polygon(0 0, 100% 0, 100% 78%, 0% 100%);
+}
+
+.our_team .team_member .member_img {
+    background: #e9e5fa;
+    max-width: 190px;
+    margin: 0 auto;
+    /*border-radius: 50%;*/
+    padding: 5px;
+    position: relative;
+    cursor: pointer;
+    width: 15rem;
+    height: 15rem;
+    object-fit: cover;
+    border-radius: 50%;
+    margin-top: -10rem;
+    z-index: 999;
+    border: 0.5px solid #ebeef8;
+}
+
+.our_team .team_member .member_img img {
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.our_team .team_member h3 {
+    text-transform: uppercase;
+    font-size: 18px;
+    line-height: 18px;
+    letter-spacing: 2px;
+    margin: 15px 0 0px;
+}
+
+.our_team .team_member span {
+    font-size: 10px;
+}
+
+.our_team .team_member p {
+    margin-top: 20px;
+    font-size: 14px;
+    line-height: 20px;
+}
+
+.our_team .team_member .member_img .social_media {
+    position: absolute;
+    top: 5px;
+    left: 5px;
+    background: rgba(0, 0, 0, 0.65);
+    width: 95%;
+    height: 95%;
+    border-radius: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: scale(0);
+    transition: all 0.5s ease;
+}
+
+.our_team .team_member .member_img .social_media .item {
+    margin: 0 10px;
+}
+
+.our_team .team_member .member_img .social_media .fab {
+    color: #8c7ae6;
+    font-size: 20px;
+}
+
+.our_team .team_member .member_img:hover .social_media {
+    transform: scale(1);
 }
 
 
@@ -809,3 +913,9 @@ footer {
         margin-right: 0.5rem;
     }
 }
+
+
+/*
+.services-informations {
+    visibility: hidden;
+}*/
